[project]
name = "cloud-mcp-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "langchain>=1.3.13",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
